oxiplate-derive/tests/broken/strings/ascii-escape-span.stderr
error: End of file encountered while parsing a writ. Expected `}}`, `-}}`, or `_}}`
 --> tests/broken/strings/ascii-escape-span.rs:4:28
  |
4 | #[oxiplate_inline("hello\n{{")]
  |                            ^
